--- a/package.json
+++ b/package.json
@@ -42,6 +42,14 @@
     "axios": "^1.8.4",
     "ws": "^8.18.0"
   },
+  "overrides": {
+    "simple-update-notifier": {
+      "semver": "^7.5.2"
+    },
+    "uglifyify": {
+      "terser": ">=4.8.1"
+    }
+  },
   "devDependencies": {
     "@types/node": "^14.14.25",
     "@types/websocket": "^1.0.2",
